5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1888_3180.log
== SUBMITION (2019-07-09 16:12:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(n,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[i]+1
	if a[i] == 2:
		x = y[i] +1
	if a[i] == 3:
		x = y[i] + 1
	if a[i] == 4:
		x = y[i] + 1
print(x)
-- EXECUTION TIME:
1.22045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3180/main.py", line 4, in <module>
    y = zeros(n,dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(n,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[i]+1
	if a[i] == 2:
		x = y[i] +1
	if a[i] == 3:
		x = y[i] + 1
	if a[i] == 4:
		x = y[i] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(n,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[i]+1
	if a[i] == 2:
		x = y[i] +1
	if a[i] == 3:
		x = y[i] + 1
	if a[i] == 4:
		x = y[i] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[i]+1
	if a[i] == 2:
		x = y[i] +1
	if a[i] == 3:
		x = y[i] + 1
	if a[i] == 4:
		x = y[i] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[i]+1
	if a[i] == 2:
		x = y[i] +1
	if a[i] == 3:
		x = y[i] + 1
	if a[i] == 4:
		x = y[i] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:14:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1] +1
	if a[i] == 3:
		x = y[2] + 1
	if a[i] == 4:
		x = y[3] + 1
print(x)
-- EXECUTION TIME:
0.996322
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3180/main.py", line 13, in <module>
    x = y[3] + 1
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:14:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1] +1
	if a[i] == 3:
		x = y[2] + 1
	if a[i] == 4:
		x = y[3] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:14:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1] +1
	if a[i] == 3:
		x = y[2] + 1
	if a[i] == 4:
		x = y[3] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(3,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	if a[i] == 2:
		x = y[1]+1
	if a[i] == 3:
		x = y[2]+ 1
	if a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size[a]:
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size(a):
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		y = y[0]+1
	elif a[i] == 2:
		y = y[1]+1
	elif a[i] == 3:
		y = y[2]+ 1
	elif a[i] == 4:
		y = y[3]+ 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		y = y[0]+1
	elif a[i] == 2:
		y = y[1]+1
	elif a[i] == 3:
		y = y[2]+ 1
	elif a[i] == 4:
		y = y[3]+ 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		x = y[0]+1
	elif a[i] == 2:
		x = y[1]+1
	elif a[i] == 3:
		x = y[2]+ 1
	elif a[i] == 4:
		x = y[3]+ 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in size(a):
	if a[i] == 1:
		y[0] += 1
	elif a[i] == 2:
		y[1] += 1
	elif a[i] == 3:
		y[2] ++ 1
	elif a[i] == 4:
		 y[3] += 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		y[0] += 1
	elif a[i] == 2:
		y[1] += 1
	elif a[i] == 3:
		y[2] ++ 1
	elif a[i] == 4:
		 y[3] += 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		y[0] += 1
	elif a[i] == 2:
		y[1] += 1
	elif a[i] == 3:
		y[2] += 1
	elif a[i] == 4:
		 y[3] += 1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = zeros(4,dtype=int)
for i in range(size(a)):
	if a[i] == 1:
		y[0] += 1
	elif a[i] == 2:
		y[1] += 1
	elif a[i] == 3:
		y[2] += 1
	elif a[i] == 4:
		 y[3] += 1
print(y)
-- EXECUTION TIME:
1.09381
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 2]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 1]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
[4 4 4 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
